--- a/3.4_Logistic_Regression.ipynb
+++ b/3.4_Logistic_Regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "3.4 Logistic Regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIWYDo8Xrv26rQAvseCv5j",
+      "authorship_tag": "ABX9TyNGP8eY/Q0olPrbWroi3UQV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,10 @@
         "id": "Y1moBpz__e6J"
       },
       "source": [
-        "For $x,\\alpha \\in \\mathbb{R}^d$, let $p(\\alpha;x)$ be the probability of the output to be 1, we define $$\\log \\frac{p(\\alpha;x)}{1− p(\\alpha;x)}= \\alpha^Tx.$$\n",
+        "For $x,\\alpha \\in \\mathbb{R}^d$, let $p(\\alpha;x)$ be the probability of the output to be 1, we define $$\\log \\frac{p(\\alpha;x)}{1-p(\\alpha;x)}= \\alpha^Tx.$$\n",
         "Here $\\alpha^T \\textbf{x} = \\sum x_i\\alpha_i$ can be viewed as a regression problem which seeks the best parameters ($\\textbf{x}$) with given data ($\\alpha$). Rearranging this expression gives\n",
         "$p(\\alpha;\\textbf{x}) = \\sigma(\\alpha^T \\textbf{x})$ where the sigmoid function is\n",
-        "$$\\sigma(t) = \\frac{1}{1+e^−t}$$\n",
+        "$$\\sigma(t) = \\frac{1}{1+e^-t}$$\n",
         "for $t \\in\\mathbb{R}$. To maximize the likelihood of the data, we assume the labels are\n",
         "independent given the features, which is given by\n",
         "$$\\mathcal{L} (\\textbf{x};A,\\textbf{b}) =\\prod_{i=1}^n p(\\alpha_i;\\textbf{x})^{b_i}(1− p(\\alpha_i;\\textbf{x}))^{1−b_i}$$\n",
