--- a/3.4_Logistic_Regression.ipynb
+++ b/3.4_Logistic_Regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "3.4 Logistic Regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGP8eY/Q0olPrbWroi3UQV",
+      "authorship_tag": "ABX9TyPOXv8WFDLgiuLaVUegJfrz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,10 +39,10 @@
         "$$\\sigma(t) = \\frac{1}{1+e^-t}$$\n",
         "for $t \\in\\mathbb{R}$. To maximize the likelihood of the data, we assume the labels are\n",
         "independent given the features, which is given by\n",
-        "$$\\mathcal{L} (\\textbf{x};A,\\textbf{b}) =\\prod_{i=1}^n p(\\alpha_i;\\textbf{x})^{b_i}(1− p(\\alpha_i;\\textbf{x}))^{1−b_i}$$\n",
-        "Taking a logarithm, multiplying by $−1/n$ and substituting the sigmoid function, we want to minimize the cross-entropy loss.\n",
-        "$$l(\\textbf{x};A,\\textbf{b}) = −\\frac{1}{n}\\sum_{i=1}^n b_i\\log(\\sigma (\\alpha^T\n",
-        "\\textbf{x}))−\\frac{1}{n}\\sum_{i=1}^n (1−b_i)\\log(1−\\sigma(\\alpha^T\\textbf{x})).$$\n",
+        "$$\\mathcal{L} (\\textbf{x};A,\\textbf{b}) =\\prod_{i=1}^n p(\\alpha_i;\\textbf{x})^{b_i}(1- p(\\alpha_i;\\textbf{x}))^{1-b_i}$$\n",
+        "Taking a logarithm, multiplying by $-1/n$ and substituting the sigmoid function, we want to minimize the cross-entropy loss.\n",
+        "$$l(\\textbf{x};A,\\textbf{b}) = -\\frac{1}{n}\\sum_{i=1}^n b_i\\log(\\sigma (\\alpha^T\n",
+        "\\textbf{x}))-\\frac{1}{n}\\sum_{i=1}^n (1-b_i)\\log(1-\\sigma(\\alpha^T\\textbf{x})).$$\n",
         "That is, we solve\n",
         "$$\\min_{x\\in\\mathbb{R}^d}l(\\textbf{x};A,\\textbf{b}).$$"
       ]
